--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,118 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+body {
+background: lightgray;
+font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.cover {
+  width: 90%;
+  margin: 10px auto;
+  height: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.input {
+  width: 95%;
+  padding: 5px 10px;
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 0 auto;
+}
+
+.todo-form {
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  background: gray;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  width: 95%;
+  margin: 10px auto 10px auto;
+
+}
+
+.h2 {
+  color: black;
+   padding-bottom: 5px;
+}
+
+
+.text-section {
+  width: 100%;
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.text-section h4 {
+  padding: 5px;
+  width: 100%;
+  margin: 5px auto;
+  color: black;
+}
+.text-section h5 {
+  padding: 5px;
+  width: 100%;
+  margin: 5px auto;
+  color: blue;
+}
+.btn-section {
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: row;
+  width: 100%;
+}
+
+.inner {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 10px auto 10px auto;
+  color: red;
+  padding: 5px;
+}
+
+@media only screen and (min-width: 600px){
+.todo-form {
+  width: 40%;
+}
+.container {
+  width: 40%;
+margin: 10px auto;
+}
+.inner {
+  flex-direction: row;
+}
+.btn-section {
+  display: flex;
+  flex-wrap:wrap;
+  flex-direction: column;
+  width: 30%;
+}
+.text-section {
+  width: 68%;
+}
+
 }
